--- a/1.md
+++ b/1.md
@@ -41,8 +41,10 @@
 - Необходимо аналогично настроить отслеживание состояния интерфейсов Gi0/0 (для первой группы).
 - Для проверки корректности настройки, разорвите один из кабелей между одним из маршрутизаторов и Switch0 и запустите ping между PC0 и Server0.
 - На проверку отправьте получившуюся схему в формате pkt и скриншот, где виден процесс настройки маршрутизатора.
-  [Схема pkt][https://github.com/netology-code/sys-pattern-homework](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/hsrp_advanced-kornev.pkt)
-![скрин](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/router1-2.JPG)
+
+  [Схема pkt](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/hsrp_advanced-kornev.pkt)
+
+  ![скрин](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/router1-2.JPG)
   
 
 ------
