--- a/1.md
+++ b/1.md
@@ -42,6 +42,8 @@
 - Для проверки корректности настройки, разорвите один из кабелей между одним из маршрутизаторов и Switch0 и запустите ping между PC0 и Server0.
 - На проверку отправьте получившуюся схему в формате pkt и скриншот, где виден процесс настройки маршрутизатора.
 
+### РЕШЕНИЕ 1
+
   [Схема pkt](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/hsrp_advanced-kornev.pkt)
 
   ![скрин](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/router1-2.JPG)
@@ -56,6 +58,8 @@
 - Напишите Bash-скрипт, который будет проверять доступность порта данного веб-сервера и существование файла index.html в root-директории данного веб-сервера.
 - Настройте Keepalived так, чтобы он запускал данный скрипт каждые 3 секунды и переносил виртуальный IP на другой сервер, если bash-скрипт завершался с кодом, отличным от нуля (то есть порт веб-сервера был недоступен или отсутствовал index.html). Используйте для этого секцию vrrp_script
 - На проверку отправьте получившейся bash-скрипт и конфигурационный файл keepalived, а также скриншот с демонстрацией переезда плавающего ip на другой сервер в случае недоступности порта или файла index.html
+
+### РЕШЕНИЕ 1
 
   [bash скрипт проверки работы вэб сервера и доступности индексного файла](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/check_script.sh)
 
