--- a/1.md
+++ b/1.md
@@ -65,8 +65,10 @@
 
   [keepalived.conf](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/keepalived.conf)
 
+скрин при работающем NGINX на MASTER сервере:
 ![скрин при работающем NGINX на MASTER сервере](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/keepalined-master-nginx-live.JPG)
 
+скрин при НЕ работающем NGINX на MASTER сервере:
 ![скрин при НЕ работающем NGINX на MASTER сервере](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/1/keepalined-master-nginx-dead.JPG)
 
 
