--- a/2.md
+++ b/2.md
@@ -41,6 +41,11 @@
 - Настройте балансировку Round-robin на 4 уровне.
 - На проверку направьте конфигурационный файл haproxy, скриншоты, где видно перенаправление запросов на разные серверы при обращении к HAProxy.
 
+### Решение 1
+
+ [haproxy1.cfg](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/2/haproxy/haproxy1.cfg)
+
+ ![haproxy1](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/2/haproxy-work.JPG)
 
 ### Задание 2
 - Запустите три simple python сервера на своей виртуальной машине на разных портах
@@ -48,6 +53,11 @@
 - HAproxy должен балансировать только тот http-трафик, который адресован домену example.local
 - На проверку направьте конфигурационный файл haproxy, скриншоты, где видно перенаправление запросов на разные серверы при обращении к HAProxy c использованием домена example.local и без него.
 
+### Решение 2
+
+ [haproxy2.cfg](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/2/haproxy/haproxy2.cfg)
+
+ ![haproxy1](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/2/haproxy-3srv-lvl7-work.JPG)
 
 
 ---
