--- a/3.md
+++ b/3.md
@@ -40,6 +40,9 @@
 - Необходимо сделать так, чтобы rsync подсчитывал хэш-суммы для всех файлов, даже если их время модификации и размер идентичны в источнике и приемнике.
 - На проверку направить скриншот с командой и результатом ее выполнения
 
+### Решение 1
+
+![rsync](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/3/rsync.JPG)
 
 
 ### Задание 2
@@ -48,6 +51,20 @@
 - Резервная копия должна создаваться раз в день, в системном логе должна появляться запись об успешном или неуспешном выполнении операции
 - Резервная копия размещается локально, в директории `/tmp/backup`
 - На проверку направить файл crontab и скриншот с результатом работы утилиты.
+
+### Решение 2
+
+script
+
+![script](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/3/script%20backup.JPG)
+
+crontab
+
+![crontab](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/3/crontab.JPG)
+
+
+
+![syslog](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/3/syslog.JPG)
 
 
 ---
