--- a/3.md
+++ b/3.md
@@ -62,7 +62,7 @@ crontab
 
 ![crontab](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/3/crontab.JPG)
 
-
+syslog
 
 ![syslog](https://github.com/denirus59/homework-otkazousti4ivost/blob/main/3/syslog.JPG)
 
